# beautiful_applied_mathematics

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/duffing/: CMakeLists.txt
src/duffing/src/: duffing.cc
src/operators/: CMakeLists.txt
src/operators/src/: diff.cc  diff.h  runge_kutta.cc  runge_kutta.h
src/operators/src/operators/: diff.cc  diff.h  runge_kutta.cc  runge_kutta.h
src/operators/test/: operators_test.cc
src/utilities/: CMakeLists.txt
src/utilities/src/: gnuplot.cc  gnuplot.h
src/utilities/test/: gnuplot_test.cc
